gap issue again

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -207,7 +207,7 @@ a {
     justify-content: space-between;
     height: 50px;
     align-items: center;
-    margin-top: 7px;
+    margin-top: 1px;
 }
 
 .timeWrap {
